# secure-eval-wrapper

./: .env.example  .gitignore  AGENTS.md  ENGINEERING_HARD_PARTS.md  README.md
open-core/: README.md  main.py  pyproject.toml  setup.py
open-core/data/sample/: crypto_ohlcv_sample.json  features.json  generic_eval.json  public_alpha_signal_sample.json  public_market_data_bundle_sample.json
open-core/db/: README.md
open-core/db/migrations/: 0001_initial_schema.sql  0002_schema_migrations.sql  0003_data_quality_quarantine.sql  0004_reconciliation_persistence.sql  0005_trade_funding_instrument_hardening.sql  0006_phase2_final_hardening.sql  0007_alpha_signal_library.sql  0008_phase3_phase4_audit_repairs.sql  0009_phase5_simulated_execution_backtesting.sql  0010_phase5_second_audit_repairs.sql  0011_phase5_run_membership_repairs.sql  0012_phase5_run_scoped_projection_repairs.sql  0013_phase6_monitoring_simulated_fix.sql  0014_phase6_first_audit_repairs.sql  0015_phase6_concurrency_and_audit_integrity.sql  0016_phase7_safe_paper_trading.sql  0017_phase7_durable_paper_recovery.sql  0018_phase7_recovery_state_machine_integrity.sql  0019_phase7_venue_event_and_accounting_integrity.sql  0020_phase7_price_terminal_and_expiry_integrity.sql  0021_phase7_cancel_terminal_accounting_integrity.sql  0022_phase8_guarded_live_foundation.sql  0023_phase8a_authority_recovery_and_cli_integrity.sql  0024_phase8a_evidence_reconciliation_metadata_integrity.sql  0025_phase8a_okx_credential_permission_authority.sql  0026_phase8b_authenticated_readonly_preflight.sql
open-core/db/schema/: README.md
open-core/scripts/: apply_postgres_migrations.py  binance_public_ohlcv_smoke.py  generate_phase8b_shadow_evidence.py  postgres_local.ps1  run_all.ps1  run_demo.ps1  run_eval.ps1  run_generic_demo.ps1  run_internal_paper.py  run_live_dry_run.py  run_live_kill.py  run_live_preflight.py  run_live_reconcile.py  run_live_status.py  run_paper_kill.py  run_paper_preflight.py  run_paper_reconcile.py  run_paper_sandbox.py  run_paper_status.py  run_public_alpha_signal_pipeline.py  run_public_backtest_pipeline.py  run_public_market_data_pipeline.py  run_public_monitoring.py  run_public_ohlcv_pipeline.py  run_simulated_fix.py  seed_phase7_upgrade.py  seed_phase8_upgrade.py  start.ps1  verify_built_repository_identity.py  verify_phase5_postgres_schema.py  verify_phase7_postgres_schema.py  verify_phase8_postgres_schema.py  verify_postgres_schema.py
open-core/src/: cli.py  eval_cli.py  generic_eval_cli.py  registry.py
open-core/src/core/: strategy_base.py
open-core/src/eval/: repro.py  (+4 more)
open-core/tests/: phase7_test_support.py  phase8b_shadow_test_support.py  test_alpha_engine_persistence_and_leakage.py  test_alpha_signal_persistence.py  test_binance_spot_provider.py  test_data_collection_offline.py  test_data_contracts.py  test_non_ohlcv_persistence_pipelines.py  test_ohlcv_normalization_validation.py  test_ohlcv_pipeline.py  test_ohlcv_reconciliation.py  test_okx_public_provider.py  test_phase2_final_hardening.py  test_phase2d_persistence.py  test_phase3_phase4_audit_repairs.py  test_phase5_execution.py  test_phase5_fourth_audit.py  test_phase5_invariance.py  test_phase5_persistence_package.py  test_phase5_postgres_integration.py  test_phase5_second_audit.py  test_phase5_third_audit.py  test_phase6_first_audit_postgres.py  test_phase6_first_audit_repairs.py  test_phase6_fix.py  test_phase6_fix_gateway.py  test_phase6_monitoring.py  test_phase6_postgres_integration.py  test_phase6_projection_valuation.py  test_phase6_second_audit.py  test_phase6_second_audit_postgres.py  test_phase7_cli_monitoring_boundaries.py  test_phase7_contracts_preflight_approval.py  test_phase7_durable_postgres.py  test_phase7_fifth_audit.py  test_phase7_fourth_audit.py  test_phase7_internal_accounting_reconciliation_kill.py  test_phase7_official_sandbox_adapter.py  test_phase7_postgres_integration.py  test_phase7_third_audit_repairs.py  (+28 more)
(+230 files in other folders)
