[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "secure-eval-wrapper"
version = "0.6.0"
description = "Public-safe deterministic crypto trading research, monitoring, and simulated FIX framework"
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
postgres = ["psycopg[binary]>=3.1,<4"]
test = []

[project.scripts]
secure-eval-backtest = "secure_eval_wrapper.backtesting.cli:main"
secure-eval-validate = "secure_eval_wrapper.validation:main"
secure-eval-monitor = "secure_eval_wrapper.monitoring.cli:main"
secure-eval-fix-sim = "secure_eval_wrapper.fix.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["secure_eval_wrapper*"]
