[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "secure-eval-wrapper"
version = "0.8.1"
description = "Public-safe crypto research, simulation, paper, and guarded-live dry-run framework"
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
postgres = ["psycopg[binary]>=3.1,<4"]
test = []

[project.scripts]
secure-eval-backtest = "secure_eval_wrapper.backtesting.cli:main"
secure-eval-validate = "secure_eval_wrapper.validation:main"
secure-eval-monitor = "secure_eval_wrapper.monitoring.cli:main"
secure-eval-fix-sim = "secure_eval_wrapper.fix.cli:main"
secure-eval-paper-preflight = "secure_eval_wrapper.paper.cli:preflight_main"
secure-eval-paper-internal = "secure_eval_wrapper.paper.cli:internal_main"
secure-eval-paper-run = "secure_eval_wrapper.paper.cli:run_main"
secure-eval-paper-status = "secure_eval_wrapper.paper.cli:status_main"
secure-eval-paper-kill = "secure_eval_wrapper.paper.cli:kill_main"
secure-eval-paper-reconcile = "secure_eval_wrapper.paper.cli:reconcile_main"
secure-eval-live-preflight = "secure_eval_wrapper.live.cli:preflight_main"
secure-eval-live-dry-run = "secure_eval_wrapper.live.cli:dry_run_main"
secure-eval-live-status = "secure_eval_wrapper.live.cli:status_main"
secure-eval-live-reconcile = "secure_eval_wrapper.live.cli:reconcile_main"
secure-eval-live-kill = "secure_eval_wrapper.live.cli:kill_main"
secure-eval-live-bootstrap = "secure_eval_wrapper.live.bootstrap_cli:main"
secure-eval-live-shadow = "secure_eval_wrapper.live.shadow_cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["secure_eval_wrapper*"]
